<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuzzterMovil</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="prueba_usuario">JEscalante</string>
    <string name="prueba_tipo">Serie</string>
	<string name="prueba_tiempo">Hace 30 min</string>
	<string name="prueba_titulo">Titulo primera publicación</string>
	<string name="prueba_descripcion">Una pequeña descripción aqui.....</string>
	<string name="prueba_comentarios">10</string>
	<string name="prueba_likes">5</string>
	<string name="prueba_ver_mas">ver más</string>
</resources>
