<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prueba_usuario"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:padding="5dp"
                    android:text="@string/prueba_tipo"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse" />

                <TextView
                    android:id="@+id/txt_tiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/prueba_tiempo"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prueba_titulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prueba_descripcion"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCC"
        android:orientation="horizontal"
        android:padding="5dp">
		<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
	        android:orientation="horizontal" >
            <ImageView
            	android:id="@+id/img_star"
            	android:layout_width="24dp"
            	android:layout_height="24dp"
            	android:layout_marginRight="2dp"
            	android:src="@drawable/ic_action_important" />

        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="match_parent"
        	    android:gravity="center"
        	    android:text="@string/prueba_likes"
        	    android:textAppearance="?android:attr/textAppearanceSmall" />

        	<ImageView
            	android:id="@+id/img_comments"
            	android:layout_width="24dp"
            	android:layout_height="24dp"
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="2dp"
            	android:src="@drawable/ic_action_chat" />
        	<TextView
            	android:layout_width="wrap_content"
	            android:layout_height="match_parent"
        	    android:gravity="center"
	            android:text="@string/prueba_comentarios"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
       		android:layout_alignParentTop="true"
       		android:orientation="horizontal" >
            <ImageView
	           	android:id="@+id/img_publicacion_comments"
	           	android:layout_width="24dp"
	           	android:layout_height="24dp"
				android:layout_marginLeft="10dp"
	           	android:layout_marginRight="2dp"
	           	android:src="@drawable/ic_action_overflow" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>